--- a/test.cfg
+++ b/test.cfg
@@ -1,1 +1,1 @@
-{"server":"192.168.0.93","port":"1433","database":"GMSSample","user":"sa","password":"GMSgms123","reports.config":""}
+{"server":"192.168.0.93","port":"1433","database":"GMSSample38xml","user":"sa","password":"GMSgms123","reports.config":""}
